fixed line spacing and button

--- a/Style.css
+++ b/Style.css
@@ -54,7 +54,7 @@ nav{
   font-style: italic;
   text-align: center;
   font-family: arial;
-  line-height: 30px;
+  line-height: 35px;
 }
 #text1{
 
